# STM32-RGB-LED-Control

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  diagram.json  wokwi.toml
cmake/: linter.cmake  prepare.cmake  targets.cmake  utilities.cmake
cmake/templates/: launch.json.in
cube/: rgb_led_control_v1.ioc  rgb_led_control_vl031.ioc
inc/: button.hpp  potentiometer.hpp  rgb.hpp  utils.hpp
src/: button.cpp  main.cpp  mcu.cpp  potentiometer.cpp  rgb.cpp
